# hf-papers-zh-tw

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: daily.yml
data/2026-02-25/: papers.json
data/2026-02-25/2602.12192/: abstract_zh.txt  parsed.json  tags.json  title_zh.txt  translated.json
data/2026-02-25/2602.14337/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-25/2602.16603/: abstract_zh.txt  parsed.json  tags.json  title_zh.txt  translated.json
data/2026-02-25/2602.16745/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-25/2602.16813/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-25/2602.16932/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-25/2602.16990/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-25/2602.18735/: abstract_zh.txt  parsed.json  tags.json  title_zh.txt  translated.json
data/2026-02-25/2602.18940/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-25/2602.18998/: abstract_zh.txt  tags.json  title_zh.txt
data/2026-02-27/: papers.json
docs/: index.html
docs/2026-02-25/: index.html
docs/2026-02-27/: index.html
docs/assets/: style.css
docs/pagefind/: pagefind-entry.json  pagefind.zh-tw_59d77d173cc57.pf_meta  pagefind.zh-tw_9d6b41865bfc3.pf_meta  pagefind.zh-tw_afb5743e93952.pf_meta  pagefind.zh-tw_fbee354d12697.pf_meta
src/: build_site.py  config.py  download_pdf.py  fetch_papers.py  generate_tags.py  main.py  parse_arxiv_html.py  parse_pdf.py  send_email.py  translate.py
templates/: base.html  daily_index.html  index.html  paper.html
(+362 files in other folders)
